# clearbox-wrapper

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  mypy.ini  noxfile.py  pyproject.toml  setup.py
.github/workflows/: CI.yml  release.yml  tests.yml
clearbox_wrapper/: ClearBoxWrapper.py  KerasWrapper.py  PytorchWrapper.py  SklearnWrapper.py  XgboostWrapper.py  __init__.py  clearbox_wrapper.py  generic_model.py  utils.py  wrapper.py
clearbox_wrapper/data_preparation/: __init__.py  data_preparation.py
clearbox_wrapper/exceptions/: __init__.py  exceptions.py
clearbox_wrapper/keras/: __init__.py  keras.py
clearbox_wrapper/model/: __init__.py  model.py
clearbox_wrapper/preprocessing/: __init__.py  preprocessing.py
clearbox_wrapper/pyfunc/: __init__.py  model.py  pyfunc.py
clearbox_wrapper/pytorch/: __init__.py  pickle_module.py  pytorch.py
clearbox_wrapper/schema/: __init__.py  schema.py  utils.py
clearbox_wrapper/signature/: __init__.py  schema.py  signature.py  utils.py
clearbox_wrapper/sklearn/: __init__.py  sklearn.py
clearbox_wrapper/slearn/: sklearn.py
clearbox_wrapper/utils/: __init__.py  environment.py  file_utils.py  model.py  model_utils.py
clearbox_wrapper/wrapper/: __init__.py  model.py  utils.py  wrapper.py
clearbox_wrapper/xgboost/: __init__.py  xgboost.py
docs/en/: mkdocs.yml
examples/: cifar_net.pth  keras_fashion_mnist_dataset.ipynb  sklearn_boston.model  sklearn_boston_dataset.ipynb  torch_cifar.model  torch_cifar10_dataset.ipynb  xgb_diabetes_dataset.ipynb  xgboost_diabetes_dataset.ipynb
prova/: MLmodel  conda.yaml  model.pkl
prova_wrapper/: MLmodel  conda.yaml  model.dill  preprocessing.dill
tests/: wrapper.py
(+61 files in other folders)
